--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@strapi/plugin-graphql": "^4.3.4",
     "@strapi/plugin-i18n": "4.3.4",
     "@strapi/plugin-users-permissions": "4.3.4",
     "@strapi/strapi": "4.3.4",
     "@strapi/utils": "^4.3.4",
-    "pg": "8.6.0"
+    "pg": "8.6.0",
+    "socket.io": "^4.5.1"
   },
   "author": {
     "name": "A Strapi developer"
