--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,14 @@
 {
   "name": "pretzel",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "axios": "^0.27.2",
     "concurrently": "^7.3.0",
+    "gh-pages": "^4.0.0",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build-css": "npx tailwindcss -i ./src/input.css -o ./public/output.css",
