--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-graphql": "^4.3.4",
     "@strapi/plugin-i18n": "4.3.4",
@@ -17,7 +16,8 @@
     "@strapi/strapi": "4.3.4",
     "@strapi/utils": "^4.3.4",
     "pg": "8.6.0",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "strapi": "^3.6.10"
   },
   "author": {
     "name": "A Strapi developer"
