--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
     "@strapi/utils": "^4.3.4",
     "pg": "8.6.0",
     "socket.io": "^4.5.1",
-    "strapi": "^3.6.10"
+    "strapi-plugin-populate-deep": "^0.1.2"
   },
   "author": {
     "name": "A Strapi developer"
